--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,7 +6,6 @@ body{
 .chat{
     display: flex;
     justify-content: space-between;
-    border: solid 1px black;
 }
 
 .profile{
@@ -33,4 +32,13 @@ img{
 
 i{
     font-size: 1.5em;
+}
+
+.col-9{
+    background-color: aqua;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
